--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     left: 0;
     width: var(--nav-width);
-    height: 100vh;
+    height: 100%;
     background: #222222;
 }
 
