--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -1,16 +1,28 @@
-@media (pointer: fine), (pointer: none) {
-	/* desktop */
+@media only screen and (hover: none) and (pointer: coarse) and (orientation : portrait) {
+    html {
+        zoom: 80%;
+    }
+}
+
+@media only screen and (max-device-height:800px) and (pointer: fine) {
     html {
         zoom: 150%;
+    }
+}
+
+@media only screen and (min-device-height:1280px) and (max-device-height:1280px) {
+    html {
+        zoom: 200%;
     }
 }
 
 body {
     --nav-width: 200px;
     margin: 0 0 0 var(--nav-width);
-    font-family: 'Quicksand', sans-serif;
     font-size: 18px;    
     text-align: left;
+    background-color: #afb39d52;
+    font-family: "Roboto";
 }
 
 table, input {
@@ -18,12 +30,11 @@ table, input {
 } 
 
 h1, :not(.nav) > h2 {
-    color: #4c942ab9;
     font-weight: bold;
 }
 
-.nav > h2 {
-    color: #4c942ab9;
+h1, h2, b, strong, th {
+    color: #4c942ad0;
 }
 
 .nav {
@@ -44,7 +55,7 @@ h1, :not(.nav) > h2 {
 }
 
 .nav__link:hover {
-    background: rgba(255, 255, 255, 0.05);
+    background-color: #4c942ab9; 
 }
 
 #app {
@@ -94,15 +105,32 @@ a {
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid #41a015e3;
 }
 
 .styled-table tbody tr.active-row {
     font-weight: bold;
-    color: #009879;
+    color: #41a015e3;
 }
 
 #anti-spoiler {
     color: #eaf7f4;
     background-color: #2c3533;
 }
+
+input, textarea, button {
+    background-color: #f3f3f3;
+  }
+
+button {
+    color: black;
+    border: 1.5px solid lightgray;
+    transition-duration: 0.4s;
+    border-radius: 4px;
+    padding: 2% 2%;
+  }
+
+  button:hover {
+    background-color: #4c942a83; 
+    color: white;
+  }
